; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_meson_gxbb_wdt.c_meson_gxbb_wdt_stop.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_meson_gxbb_wdt.c_meson_gxbb_wdt_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.watchdog_device = type { i32 }
%struct.meson_gxbb_wdt = type { i64 }

@GXBB_WDT_CTRL_REG = common dso_local global i64 0, align 8
@GXBB_WDT_CTRL_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.watchdog_device*)* @meson_gxbb_wdt_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @meson_gxbb_wdt_stop(%struct.watchdog_device* %0) #0 {
  %2 = alloca %struct.watchdog_device*, align 8
  %3 = alloca %struct.meson_gxbb_wdt*, align 8
  store %struct.watchdog_device* %0, %struct.watchdog_device** %2, align 8
  %4 = load %struct.watchdog_device*, %struct.watchdog_device** %2, align 8
  %5 = call %struct.meson_gxbb_wdt* @watchdog_get_drvdata(%struct.watchdog_device* %4)
  store %struct.meson_gxbb_wdt* %5, %struct.meson_gxbb_wdt** %3, align 8
  %6 = load %struct.meson_gxbb_wdt*, %struct.meson_gxbb_wdt** %3, align 8
  %7 = getelementptr inbounds %struct.meson_gxbb_wdt, %struct.meson_gxbb_wdt* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @GXBB_WDT_CTRL_REG, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i32 @readl(i64 %10)
  %12 = load i32, i32* @GXBB_WDT_CTRL_EN, align 4
  %13 = xor i32 %12, -1
  %14 = and i32 %11, %13
  %15 = load %struct.meson_gxbb_wdt*, %struct.meson_gxbb_wdt** %3, align 8
  %16 = getelementptr inbounds %struct.meson_gxbb_wdt, %struct.meson_gxbb_wdt* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @GXBB_WDT_CTRL_REG, align 8
  %19 = add nsw i64 %17, %18
  %20 = call i32 @writel(i32 %14, i64 %19)
  ret i32 0
}

declare dso_local %struct.meson_gxbb_wdt* @watchdog_get_drvdata(%struct.watchdog_device*) #1

declare dso_local i32 @writel(i32, i64) #1

declare dso_local i32 @readl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
